修改日志功能，精简HTML代码

--- a/static/assets/css/bootmetro.css
+++ b/static/assets/css/bootmetro.css
@@ -1098,7 +1098,7 @@ legend {
   margin-bottom: 20px;
   font-size: 21px;
   line-height: 40px;
-  color: #333333;
+  color: grey;
   border: 0;
   border-bottom: 1px solid #e5e5e5;
 }
